--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<ion-toolbar color="primary">
-    <ion-title>Title Only</ion-title>
+<ion-toolbar>
+    <ion-title>App Component</ion-title>
 </ion-toolbar>
 
 <router-outlet></router-outlet>
