--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,4 +1,7 @@
-<p>
-  channel works!
-</p>
+<ion-toolbar color="primary">
+  <ion-title>Channel Component</ion-title>
+</ion-toolbar>
+
+<a [routerLink]="['/login']"><ion-button>Exit Channel</ion-button></a>
+
 <app-input></app-input>
