--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,5 @@
-<p>
-  profile works!
-</p>
+<ion-toolbar color="primary">
+  <ion-title>Profile Component</ion-title>
+</ion-toolbar>
+
+<a [routerLink]="['/channel']"><ion-button>Go to Tchat</ion-button></a>
