--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,7 @@
   <ion-title>Login Component</ion-title>
 </ion-toolbar>
 
-<p>
-  login works!
-</p>
+<a [routerLink]="['/profile']"><ion-button>Login</ion-button></a>
+
 <app-status></app-status>
 <app-user-online></app-user-online>
