Liaison in Service and Component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,8 @@
   <ion-title>Login Component</ion-title>
 </ion-toolbar>
 
-<a [routerLink]="['/profile']"><ion-button>Login</ion-button></a>
-
 <app-status></app-status>
-<app-user-online></app-user-online>
+
+<app-user-online>User Online</app-user-online>
+
+<a [routerLink]="['/profile']"><ion-button>Login</ion-button></a>
