Created MessageModel and liaison with ChannelComponent

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,7 +1,9 @@
 <ion-toolbar color="primary">
-  <ion-title>Channel Component</ion-title>
+  <!-- <ion-title>Channel Component</ion-title> -->
+  <ion-badge color="success">
+    {{ messageList.length }}
+  </ion-badge> message(s) in the Channel.
 </ion-toolbar>
-
 <a [routerLink]="['/login']"><ion-button>Exit Channel</ion-button></a>
 
 <app-input></app-input>
