--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,4 +2,6 @@
   <ion-title>Profile Component</ion-title>
 </ion-toolbar>
 
+<ion-icon name="transgender"></ion-icon> Genre
+
 <a [routerLink]="['/channel']"><ion-button>Go to Tchat</ion-button></a>
