--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,50 +1,66 @@
-<!-- <ion-toolbar >
-  <ion-title>Profile Component</ion-title>
-</ion-toolbar> -->
-
 <ion-card>
-  <ion-card-header color="primary">
-    <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+
+  <ion-card-header text-center color="primary">
+
     <ion-card-title>Profile</ion-card-title>
+
   </ion-card-header>
 
   <ion-card-content>
 
     <form [formGroup]="todo" (ngSubmit)="logForm()">
+
       <ion-item>
-        <ion-label>Pseudo</ion-label>
+        <ion-label position="floating">
+          <ion-icon size="large" name="finger-print"></ion-icon> Pseudo <ion-text color="danger">*</ion-text>
+        </ion-label>
         <ion-input type="text" formControlName="pseudo"></ion-input>
       </ion-item>
+
       <ion-item>
-        <ion-label>Age</ion-label>
+        <ion-label position="floating">
+          <ion-icon size="large" name="flask"></ion-icon> Age
+        </ion-label>
         <ion-input type="number" formControlName="age"></ion-input>
       </ion-item>
+
       <ion-item>
-        <ion-label>City</ion-label>
+        <ion-label position="floating">
+          <ion-icon size="large" name="business"></ion-icon> City
+        </ion-label>
         <ion-input type="text" formControlName="city"></ion-input>
       </ion-item>
+
       <ion-item>
-        <ion-label>
-          <div>
-            <ion-icon name="transgender"></ion-icon> Gender
-          </div>
+        <ion-label position="floating">
+          <ion-icon size="large" name="transgender"></ion-icon> Gender
         </ion-label>
-        <ion-input type="text" formControlName="gender"></ion-input>
+        <ion-select formControlName="gender" placeholder="Choose your gender">
+          <ion-select-option value="Male" selected>Male</ion-select-option>
+          <ion-select-option value="Female">Female</ion-select-option>
+          <ion-select-option value="Neutral">Neutral</ion-select-option>
+        </ion-select>
       </ion-item>
-      <ion-item>
-        <ion-label>Role</ion-label>
-        <ion-input type="text" formControlName="role"></ion-input>
+
+      <ion-item hidden>
+        <ion-label position="floating">Role</ion-label>
+        <ion-input disabled value="Visitor" type="text" formControlName="role"></ion-input>
       </ion-item>
+
       <ion-item>
-        <ion-label>Avatar</ion-label>
+        <ion-label position="floating">
+          <ion-icon size="large" name="eye"></ion-icon> Avatar
+        </ion-label>
         <ion-input type="text" formControlName="avatar"></ion-input>
       </ion-item>
+
       <ion-button type="submit" [disabled]="!todo.valid">Submit</ion-button>
+
     </form>
 
   </ion-card-content>
-</ion-card>
 
+</ion-card>
 
 
 <a [routerLink]="['/channel']">
