Correction and optimize

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 
 
 
-<ion-content text-center>
+<ion-content class="ion-text-center">
 
   <img src="./../../assets/image/bulb_00.png" class="ion-align-self-center">
 
