--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <ion-card>
 
-  <ion-card-header text-center color="primary">
+  <ion-card-header class="ion-text-center" color="primary">
 
     <ion-card-title>Profile</ion-card-title>
 
@@ -79,6 +79,6 @@
 </ion-card>
 
 
-<a [routerLink]="['/login']">
+<!-- <a [routerLink]="['/channel']">
   <ion-button>Go to Tchat</ion-button>
-</a>
+</a> -->
