--- a/src/app/channel/input/input.component.html
+++ b/src/app/channel/input/input.component.html
@@ -5,7 +5,7 @@
       <ion-input placeholder="Enter your message" type="text" formControlName="message"></ion-input>
 
       <ion-button type="submit" [disabled]="!messageForm.valid">
-        Primary
+        Send
       </ion-button>
 
     </ion-item>
