--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -1,8 +1,45 @@
 :host {
 
+    h1 {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
     ion-card-content {
         height: 80vh;
         overflow-x: hidden;
         overflow-y: auto;
     }
+
+    .obfuscator {
+        z-index: 8;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        background: black;
+        opacity: .8;
+    }
+
+    .popupError {
+        background: white;
+        z-index: 9;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: 10vh;
+        width: 80vw;
+    }
+
+    div .popupError ion-card-header {
+        padding-top: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+    }
+
 }
